# hands-on-rag-groq

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
.streamlit/: config.toml
app/: main.py  ui.py
app/core/: ingestion.py  llm_model.py  retrieval.py
app/routes/: api.py
app/schemas/: request_body.py
chroma.db/16337c5a-bec3-44ff-b11f-c7f45b83f16a/: index_metadata.pickle
chroma.db/dbb92629-4c0e-4223-a96c-6e3a1dc6a19d/: index_metadata.pickle
chroma.db/e7d0eaef-3e40-4f76-9b08-f2b6818a9350/: index_metadata.pickle
config/: settings.py
examples/: sample_request.json
tests/: test_api.py  test_rag.py
